# aem-adaptor-micro-service

./: .env.example  Dockerfile  Dockerfile.redisdev  Makefile  Pipfile  README.md  docker-compose.yml  log_config.yaml  mypy.ini  pyproject.toml  redis.conf
app/: __init__.py  main.py
app/lib/content/: sch_content.py
app/lib/graphql/: client.py
app/lib/graphql/queries/sc-labs/: home.graphql
app/lib/mapper/: sch_mapper.py
app/lib/utils/: utils.py
app/routers/: sch_router.py
lib/content/: sch_content.py
lib/graphql/: client.py
lib/mapper/: sch_mapper.py
src/aem_adaptor_micro_service/: __init__.py  main.py
tests/: test_graphql_client.py  test_main.py  test_sch_content.py  test_sch_mapper.py
